finish db, add routes and mw

--- a/pgtyped.config.json
+++ b/pgtyped.config.json
@@ -6,6 +6,5 @@
 			"emitTemplate": "{{dir}}/{{name}}.queries.ts"
 		}
 	],
-	"srcDir": "./src/db/queries",
-	"dbUrl": "postgres://postgres:password@localhost/postgres"
+	"srcDir": "./src/db/queries"
 }
