--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "ts-express-example",
   "version": "0.0.1",
   "description": "An example typescript node express API.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typegen": "pgtyped -c pgtyped.config.json",
+    "start": "tsc && node dist/index.js",
+    "lint": "eslint . --ext .ts",
+    "typegen": "source ./.env && pgtyped -c pgtyped.config.json --uri $PGURI;",
     "typegen-watch": "pgtyped -w -c pgtyped.config.json"
   },
   "repository": {
@@ -21,11 +23,18 @@
   "dependencies": {
     "@pgtyped/cli": "^0.13.0",
     "@pgtyped/query": "^0.13.0",
-    "express": "^4.18.1"
+    "bunyan": "^1.8.15",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
+    "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
